<resources>
    <string name="app_name">PCSO Hub</string>
    <string name="prize">₱%1$s</string>
    <string name="menu_results">Results</string>
    <string name="menu_community">Community</string>
    <string name="menu_all_results">All Results</string>
    <string name="login_account">Login Account</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="logout_summary">Logout your account</string>
    <string name="settings">Settings</string>
    <string name="who_am_i">
            I am an Android developer who has been learning and honing my skills for the past year. I am grateful to the team behind AndroidIDE for providing the opportunity to create apps on mobile devices, even for those who may not have access to a computer.
            My first major project, PCSO Hub, took me two months to develop and I am proud of the end result. However, due to financial difficulties, I am currently unable to make it available on the Google Play Store.
            If you have enjoyed using PCSO Hub, I would greatly appreciate your support in the form of a donation to help me publish it on the Play Store. With your help, we can make this app widely available and accessible to even more users.
</string>
    <string name="tv_date_text">Search by date</string>
    <string name="fragment_comment_tl_comment_hint">Comment</string>
    <string name="fragment_post_tv_title_text">Compose a number</string>
    <string name="fragment_comment_tv_title_text">Add a comment</string>
    <string name="fragment_comment_tv_subtitle_text">Please be polite to others</string>
    <string name="fragment_post_tl_search_hint">Type something</string>
    <string name="feed_item_like">Like</string>
    <string name="feed_item_comment">Comment</string>
    <string name="feed_item_copy">Copy</string>
    <string name="theme">Theme</string>
    <string name="this_feature">Change the app theme</string>
    <string name="about">About</string>
    <string name="changelogs">Changelogs</string>
    <string name="whats_new">What\'s new in this version</string>
    <string name="about_pcso_hub">About PCSO Hub</string>
    <string name="get_to_know">Get to know behind the development of PCSO Hub</string>
    <string name="introduction">Introducing the ultimate lottery results app! Stay up-to-date with the latest winning numbers and jackpot amounts for all your favorite lottery games. Easily access past results and update for upcoming draws. Never miss a chance to win again with this convenient and user-friendly app</string>
    <string name="version">Version</string>
    <string name="email">Email</string>
    <string name="email_address">snowakira2814@gmail.com</string>
    <string name="rate_us">Rate us</string>
    <string name="developer">Developer</string>
    <string name="akira_snow">Akira Snow</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="flaticon">flaticon</string>
    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="account">Account</string>
    <string name="pcso_email">pcsohub@gmail.com</string>
    <string name="set_username">Username</string>
    <string name="dynamic_colors">Dynamic Colors</string>
    <string name="dynamic_colors_summary">Starting from Android S, the framework provides the ability to support dynamic colors</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_summary">Clear cache to free up memory such as recent results, search histories and seen posts</string>
    <string name="are_you_sure_you_want_to_clear_cache">Are you sure you want to clear cache?</string>
    <string name="source">LottoPcso Website</string>
    <string name="search">Search</string>
    <string name="compose">Compose</string>
    <string name="terms_and_privacy_title">Terms &amp; Privacy</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="dialog_set_name_tl_set_name">Set Name</string>
    <string name="disclaimer">PCSO Hub is an application that provides lotto results drawn by the Philippine Charity Sweepstakes Office (PCSO) for informational purposes only.

We make every effort to ensure that the information on our site is up-to-date and accurate, but we cannot guarantee its reliability, completeness, or accuracy. Any decisions made based on the information provided on our application are at your own risk, and we will not be held liable for any losses or damages that may result.

Please take a moment to read our Privacy Policy to understand the data we collect and why we collect it. When accessing other websites, it is important to be aware that their privacy policies and terms of use may differ from PCSO Hub\'s and may not be under our control.

We do our best to maintain the website, but PCSO Hub cannot be held responsible for any temporary technical difficulties that may cause the site to be unavailable.

It is important to note that we do not claim ownership of any lotto results, logos, or other information displayed on our application. PCSO Hub is not affiliated with PCSO. Our goal is to provide informative content and share it with our audience.

For official confirmation and any other questions, we suggest visiting the PCSO\'s official website</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="categories">Categories</string>
    <string name="sort">Sort</string>
    <string name="delete_account_summary">Delete this account from PCSO Hub server</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_summary">Login or register an account here</string>
    <string name="dispic_summary">Tap to change display picture</string>
    <string name="dispic">Display Picture</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_summary">End your current session</string>
    <string name="delete_account">Delete Account</string>
    <string name="deletion">Deletion</string>
    <string name="app_theme">App Theme</string>
</resources>
