<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/main_bottom_results">

    <fragment
        android:id="@+id/main_bottom_results"
        android:name="com.ph.pcsolottowatcher.bottomnav.tab1.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results"/>

    <fragment
        android:id="@+id/main_bottom_community"
        android:name="com.ph.pcsolottowatcher.bottomnav.tab2.feed.FeedFragment"
        android:label="@string/menu_community"
        tools:layout="@layout/fragment_feed"/>

    <fragment
        android:id="@+id/main_bottom_all_results"
        android:name="com.ph.pcsolottowatcher.bottomnav.tab3.AllResultsFragment"
        android:label="@string/menu_all_results"
        tools:layout="@layout/fragment_all_results"/>

</navigation>